actix-web-codegen/tests/trybuild/route-missing-method-fail-msrv.stderr
error: The #[route(..)] macro requires at least one `method` attribute
 --> $DIR/route-missing-method-fail-msrv.rs:3:1
  |
3 | #[route("/")]
  | ^^^^^^^^^^^^^

error[E0425]: cannot find value `index` in this scope
  --> $DIR/route-missing-method-fail-msrv.rs:10:49
   |
10 |     let srv = test::start(|| App::new().service(index));
   |                                                 ^^^^^ not found in this scope
